--- a/Ajax/Dosya/Ekle.cshtml
+++ b/Ajax/Dosya/Ekle.cshtml
@@ -39,7 +39,7 @@
              yeniDosyaID=r.Next(1000,1000000);
           }
     
-        db.Execute("INSERT INTO Dosya(DosyaID,UserID,Aciklama,Boyut,Uzanti,Tur,DosyaAdi,KayitAdi,Konum) VALUES(@0,@1,@2,@3,@4,@5,@6,@7,@8)",yeniDosyaID,WebSecurity.CurrentUserId,aciklama,boyut,"",dosyaTuru,dosyaAdi,azureDosyaAdi,konum);
+        db.Execute("INSERT INTO Dosya(DosyaID,UserID,Aciklama,Boyut,Uzanti,Tur,DosyaAdi,KayitAdi,Konum,YukleyenUserID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7,@8,@9)",yeniDosyaID,WebSecurity.CurrentUserId,aciklama,boyut,"",dosyaTuru,dosyaAdi,azureDosyaAdi,konum,WebSecurity.CurrentUserId);
 
         var queryEklenenDosya=db.QuerySingle("SELECT * FROM Dosya WHERE DosyaID=@0",yeniDosyaID);
         db.Close();   
