--- a/Ajax/Odev/OdevVer.cshtml
+++ b/Ajax/Odev/OdevVer.cshtml
@@ -90,7 +90,7 @@
                          yeniDosyaID=r.Next(1000,1000000);
                       }
 
-                    db.Execute("INSERT INTO Dosya(DosyaID,UserID,Aciklama,Boyut,Uzanti,Tur,DosyaAdi,KayitAdi) VALUES(@0,@1,@2,@3,@4,@5,@6,@7)",yeniDosyaID,WebSecurity.CurrentUserId,Baslik + " ödevinin dosyası",dosya.ContentLength,dosyaUzantisi,dosya.ContentType,dosya.FileName,KayitAdi + "." + dosyaUzantisi);
+                    db.Execute("INSERT INTO Dosya(DosyaID,UserID,Aciklama,Boyut,Uzanti,Tur,DosyaAdi,KayitAdi,YukleyenUserID) VALUES(@0,@1,@2,@3,@4,@5,@6,@7,@8)",yeniDosyaID,WebSecurity.CurrentUserId,Baslik + " ödevinin dosyası",dosya.ContentLength,dosyaUzantisi,dosya.ContentType,dosya.FileName,KayitAdi + "." + dosyaUzantisi,WebSecurity.CurrentUserId);
                     db.Execute("INSERT INTO DosyaIzinDers(DosyaID,DersID) VALUES(@0,@1)",yeniDosyaID,DersID);
     
                     DosyaID=yeniDosyaID;
