--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -25,24 +25,19 @@
     var sonAktiviteID="";
     List<Aktivite> listeAktiviteler=new List<Aktivite>();
     IEnumerable<dynamic> queryAktiviteler=null;
-    IEnumerable<dynamic> queryDersler=null;
     IEnumerable<dynamic> queryOdevler=null;
     IEnumerable<dynamic> queryOdevGonderileri=null;
  
     if (roller.Contains("Ogretici"))
      {
-        queryAktiviteler=db.Query("SELECT top 25 * FROM Aktivite WHERE Aktivite.DersID NOT IN (SELECT DersID FROM Ders WHERE Arsivlendi=1 OR Ders.Silindi=1) AND Silindi=0 AND UserID=@0 ORDER BY AktiviteID DESC",WebSecurity.CurrentUserId);
-        queryDersler=db.Query("SELECT * FROM Ders WHERE userID=@0 AND Arsivlendi=0 AND Silindi=0",WebSecurity.CurrentUserId); 
-        queryOdevler=db.Query("SELECT * FROM Odev INNER JOIN Ders ON Odev.DersID=Ders.DersID WHERE Odev.Silindi=0 AND Ders.UserID=@0 AND Ders.Arsivlendi=0 AND Ders.Silindi=0 ORDER BY Odev.EklenmeTarihi DESC",WebSecurity.CurrentUserId,DateTime.Now);
-        queryOdevGonderileri=db.Query("SELECT * FROM OdevGonderisi INNER JOIN Odev ON OdevGonderisi.OdevID=Odev.OdevID WHERE OdevGonderisi.Durum=1 AND Odev.DersID IN (SELECT DersID FROM Ders WHERE UserID=@0 AND Arsivlendi=0 AND Silindi=0) ORDER BY OdevGonderisi.OdevGonderiID DESC",WebSecurity.CurrentUserId);
+        queryAktiviteler=db.Query("SELECT top 25 * FROM Aktivite WHERE Aktivite.DersID NOT IN (SELECT DersID FROM Ders WHERE Arsivlendi=1 OR Ders.Silindi=1) AND Silindi=0 AND UserID=@0 ORDER BY AktiviteID DESC",WebSecurity.CurrentUserId);        queryOdevGonderileri=db.Query("SELECT * FROM OdevGonderisi INNER JOIN Odev ON OdevGonderisi.OdevID=Odev.OdevID WHERE OdevGonderisi.Durum=1 AND Odev.DersID IN (SELECT DersID FROM Ders WHERE UserID=@0 AND Arsivlendi=0 AND Silindi=0) ORDER BY OdevGonderisi.OdevGonderiID DESC",WebSecurity.CurrentUserId);
         
      }
     else if (roller.Contains("Ogrenci"))
     {
         
       queryAktiviteler=db.Query("SELECT top 25 * FROM Aktivite WHERE Silindi=0 AND Aktivite.DersID IN (SELECT DersID FROM DersTakip WHERE UserID=@0 AND Durum=2) AND Aktivite.DersID NOT IN (SELECT DersID FROM Ders WHERE Arsivlendi=1 OR Ders.Silindi=1) ORDER BY AktiviteID DESC",WebSecurity.CurrentUserId);  
-      queryDersler=db.Query("SELECT * FROM Ders WHERE Arsivlendi=0 AND Ders.Silindi=0 AND DersID IN (SELECT DersID FROM DersTakip WHERE UserID=@0 AND Durum=2)",WebSecurity.CurrentUserId);  
-      queryOdevler=db.Query("SELECT * FROM Odev WHERE Odev.Silindi=0 AND (Odev.DersID IN (SELECT DersID FROM DersTakip WHERE UserID=@0 AND Durum=2)) AND (Odev.OdevID NOT IN (SELECT OdevID FROM OdevGonderisi WHERE UserID=@0)) AND (Odev.OdevGonderimi<>2 OR Odev.SonTeslimTarihi>=@1) AND Odev.OdevGonderimi<>2 ORDER BY Odev.EklenmeTarihi DESC",WebSecurity.CurrentUserId,DateTime.Now);
+  
     }
   
     foreach(var aktivite in queryAktiviteler)
@@ -199,97 +194,6 @@
         <br>
     </div>
     <div class="col-lg-4">
-        <div class="widget">
-               <div class="widget-header bordered-top bordered-pink">
-                                            
-                                            <span class="widget-caption"><strong>@Resources.Resource.lblDersler</strong></span>
-                                            <div class="widget-buttons">
-
-                                              <a href="#" data-toggle="collapse">
-                                                    <i class="fa fa-minus"></i>
-                                                </a>
-                                              
-                                                <a href="#" data-toggle="maximize">
-                                                    <i class="fa fa-expand"></i>
-                                                </a>
-                                               
-                                            </div><!--Widget Buttons-->
-                                        </div><!--Widget Header-->
-                                        <div class="widget-body">
-                                            <table class="table">
-                                            @foreach (var ders in queryDersler)
-                                            {
-                                                <tr><td><a href="@Href("~/Ders/?DersID=")@ders.DersID"><i class="fa fa-book"></i> @ders.DersAdi</a></td>                                                @if (roller.Contains("Ogretici"))                                                {
-                                                     <td><h4><label class="label label-orange">@ders.KabulKodu</label></h4></td>
-                                                }                                                 </tr>
-                                            }
-                                                </table><hr>
- 
-                                        </div><!--Widget Body-->
-                                    </div><!--Widget-->         @if (roller.Contains("Ogretici")) {         <div class="widget">
-               <div class="widget-header bordered-top bordered-palegreen ">
-                                            
-                                            <span class="widget-caption"><strong>@Resources.Resource.lblOdevler</strong></span>
-                                            <div class="widget-buttons">
-
-                                              <a href="#" data-toggle="collapse">
-                                                    <i class="fa fa-minus"></i>
-                                                </a>
-                                              
-                                                <a href="#" data-toggle="maximize">
-                                                    <i class="fa fa-expand"></i>
-                                                </a>
-                                               
-                                            </div><!--Widget Buttons-->
-                                        </div><!--Widget Header-->
-                                        <div class="widget-body" style="height: 300px;overflow: auto;">
-                                            <table class="table">                                                <tr><td></td><td>@Resources.Resource.lblOdevGonderimi</td></tr>
-                                            @foreach (var odev in queryOdevler)
-                                            {
-                                                <tr>
-                                                    <td><a href="@Href("~/Odev/Goster?OdevID=" + odev.OdevID)"><i class="fa fa-clock-o"></i> @odev.Baslik </a></td>
-                                                    <td>  
-                                                        <label>
-                                                            <input class="checkbox-slider colored-primary checkBoxOdevGonderimiAcKapa" type="checkbox" title="@Resources.Resource.lblOdevGonderimi" data-OdevID="@odev.OdevID" @if (odev.OdevGonderimi==1) {<text>checked</text>} >
-                                                            <span class="text"></span>
-                                                        </label>
-                                                    </td>
-                                                </tr>
-                                            }
-                                                </table><hr>
-                                            <a href="@Href("~/Odev/Liste")"><i class="fa fa-plus-circle"></i> @Resources.Resource.lblYeniBirOdevVer</a>
-                                           
-                                        </div><!--Widget Body-->
-                                    </div><!--Widget-->        }
-        @if (roller.Contains("Ogrenci"))
-        {
-            <div class="widget">
-               <div class="widget-header bordered-top bordered-palegreen">
-                                            
-                                            <span class="widget-caption"><strong>@Resources.Resource.lblOdevler</strong></span>
-                                            <div class="widget-buttons">
-
-                                              <a href="#" data-toggle="collapse">
-                                                    <i class="fa fa-minus"></i>
-                                                </a>
-                                              
-                                                <a href="#" data-toggle="maximize">
-                                                    <i class="fa fa-expand"></i>
-                                                </a>
-                                               
-                                            </div><!--Widget Buttons-->
-                                        </div><!--Widget Header-->
-                                        <div class="widget-body">
-                                            <table class="table">
-                                            @foreach (var odev in queryOdevler)
-                                            {
-                                                <tr><td><a href="@Href("~/Odev/Goster?OdevID=" + odev.OdevID)">@odev.Baslik</a></td></tr>
-                                            }
-                                                </table><hr>
-                                           
-                                        </div><!--Widget Body-->
-                                    </div><!--Widget-->
-        }
 
           @if (roller.Contains("Ogretici"))
         {
