--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -25,13 +25,10 @@
     var sonAktiviteID="";
     List<Aktivite> listeAktiviteler=new List<Aktivite>();
     IEnumerable<dynamic> queryAktiviteler=null;
-    IEnumerable<dynamic> queryOdevler=null;
-    IEnumerable<dynamic> queryOdevGonderileri=null;
- 
+    
     if (roller.Contains("Ogretici"))
      {
-        queryAktiviteler=db.Query("SELECT top 25 * FROM Aktivite WHERE Aktivite.DersID NOT IN (SELECT DersID FROM Ders WHERE Arsivlendi=1 OR Ders.Silindi=1) AND Silindi=0 AND UserID=@0 ORDER BY AktiviteID DESC",WebSecurity.CurrentUserId);        queryOdevGonderileri=db.Query("SELECT * FROM OdevGonderisi INNER JOIN Odev ON OdevGonderisi.OdevID=Odev.OdevID WHERE OdevGonderisi.Durum=1 AND Odev.DersID IN (SELECT DersID FROM Ders WHERE UserID=@0 AND Arsivlendi=0 AND Silindi=0) ORDER BY OdevGonderisi.OdevGonderiID DESC",WebSecurity.CurrentUserId);
-        
+        queryAktiviteler=db.Query("SELECT top 25 * FROM Aktivite WHERE Aktivite.DersID NOT IN (SELECT DersID FROM Ders WHERE Arsivlendi=1 OR Ders.Silindi=1) AND Silindi=0 AND UserID=@0 ORDER BY AktiviteID DESC",WebSecurity.CurrentUserId);   
      }
     else if (roller.Contains("Ogrenci"))
     {
@@ -99,7 +96,7 @@
 }
 
 <div class="row"> 
-    <div class="col-lg-8">
+    <div class="col-lg-12">
     <div class="widget">
                <div class="widget-header bordered-top bordered-blueberry">
                                             
@@ -193,50 +190,7 @@
      
         <br>
     </div>
-    <div class="col-lg-4">
-
-          @if (roller.Contains("Ogretici"))
-        {
-            <div class="widget">
-               <div class="widget-header bordered-top bordered-blue ">
-                                            
-                                            <span class="widget-caption"><strong>@Resources.Resource.lblOdeviniGonderenler</strong></span>
-                                            <div class="widget-buttons">
-
-                                              <a href="#" data-toggle="collapse">
-                                                    <i class="fa fa-minus"></i>
-                                                </a>
-                                              
-                                                <a href="#" data-toggle="maximize">
-                                                    <i class="fa fa-expand"></i>
-                                                </a>
-                                               
-                                            </div><!--Widget Buttons-->
-                                        </div><!--Widget Header-->
-                                        <div class="widget-body" style="height: 300px;overflow: auto;">
-                                            <table class="table table-hover">
-                                            @foreach (var odevgonderisi in queryOdevGonderileri)
-                                            {
-                                                <tr>
-                                                    <td>@HelperProfil.KucukKunye(odevgonderisi.UserID)</td>
-                                                    <td>  
-                                                       <a href="@Href("~/Odev/OdevGonderisi?OdevGonderiID=" + odevgonderisi.OdevGonderiID)" class="btn btn-xs btn-info" data-toggle="tooltip" data-placement="top" title="@Resources.Resource.lblDetaylar"><i class="fa fa-search-plus"></i></a>
-                                                       <button class="btn btn-xs btn-primary btnOdevGonderisiIncelendi" data-OdevGonderiID="@odevgonderisi.OdevGonderiID" data-toggle="tooltip" data-placement="top" title="@Resources.Resource.lblIncelendi"><i class="fa fa-check-square-o"></i></button>
-                                                    </td>
-                                                </tr>
-                                            }
-                                                </table><hr>
-                                            
-                                           
-                                        </div><!--Widget Body-->
-                                    </div><!--Widget-->
-           
-        }
-
-        </div>
-   
-
-    
+ 
 </div>
 
 <div class="modal" id="modalKisiDetaylari" data-tip="-1" data-AktiviteID="-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
