--- a/Odev/Goster.cshtml
+++ b/Odev/Goster.cshtml
@@ -287,7 +287,7 @@
 </div>
 @if (gonderimAcik)
 {
- <div class="modal fade" id="modalOdevGonder" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+ <div class="modal" id="modalOdevGonder" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
