--- a/Admin/EgitmenDogrulamaKodlari.cshtml
+++ b/Admin/EgitmenDogrulamaKodlari.cshtml
@@ -77,5 +77,5 @@
     <script src="@Href("~/Shared/Plugins/datatables/jquery.dataTables.min.js")"></script>
     <script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>   
     <script src="http://malsup.github.com/jquery.form.js"></script> 
-    <script src="@Href("~/Shared/Javascript/Admin/EgitmenDogrulamaKodlari.js")"></script> 
+    <script src="@Href("~/Shared/Javascript/Admin/Admin.min.js")"></script> 
 }
