--- a/Arama/Default.cshtml
+++ b/Arama/Default.cshtml
@@ -157,7 +157,7 @@
 @section js
 {
  
-   <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Arama/Default.min.js",dil))"></script>   
-   <script src="@Href("~/Shared/Javascript/Arama/Default.min.js")"></script>
+   <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Arama/Arama.min.js",dil))"></script>   
+   <script src="@Href("~/Shared/Javascript/Arama/Arama.min.js")"></script>
    
 }
