--- a/Admin/Kullanicilar.cshtml
+++ b/Admin/Kullanicilar.cshtml
@@ -145,5 +145,5 @@
     <script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>   
 <script src="@Href("~/Shared/Plugins/datatables/dataTables.tableTools.js")"></script>    
 <script src="http://malsup.github.com/jquery.form.js"></script> 
-    <script src="@Href("~/Shared/Javascript/Admin/Admin.min.js")"></script> 
+    <script src="@Href("~/Admin/Js/Admin.min.js")"></script> 
 }
