--- a/Bildirim/Default.cshtml
+++ b/Bildirim/Default.cshtml
@@ -105,6 +105,6 @@
 
 @section js
 {  
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Bildirim/Default.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Bildirim/Default.min.js")"></script> 
+    <script src="@Href(string.Format("~/Bildirim/Js/Bildirim.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Bildirim/Js/Bildirim.min.js")"></script> 
 }
