--- a/Ders/Liste.cshtml
+++ b/Ders/Liste.cshtml
@@ -222,7 +222,7 @@
 }
 @section js
 {
-<script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Ders/Liste.js",dil))"></script>
-<script src="@Href("~/Shared/Javascript/Ders/Liste.min.js")"></script>
+<script src="@Href(string.Format("~/Ders/Js/Ders.Labels.{0}.js",dil))"></script>   
+<script src="@Href("~/Ders/Js/Ders.min.js")"></script>
 }
 
