--- a/Ders/Ayarlar.cshtml
+++ b/Ders/Ayarlar.cshtml
@@ -180,8 +180,8 @@
    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
    <script src="@Href("~/Shared/Plugins/datatables/jquery.dataTables.min.js")"></script>
    <script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>
-   <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Ders/Ayarlar.js",dil))"></script>   
-   <script src="@Href("~/Shared/Javascript/Ders/Ayarlar.min.js")"></script>
+   <script src="@Href(string.Format("~/Ders/Js/Ders.Labels.{0}.js",dil))"></script>   
+   <script src="@Href("~/Ders/Js/Ders.min.js")"></script>
    
 }
 
