--- a/Ders/Liste.cshtml
+++ b/Ders/Liste.cshtml
@@ -222,6 +222,11 @@
 }
 @section js
 {
+<script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+<script src="@Href("~/Shared/Plugins/datatables/jquery.dataTables.min.js")"></script>
+<script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>
+<script src="http://malsup.github.com/jquery.form.js"></script>
+<script src="@Href("~/Shared/Plugins/daterangepicker/daterangepicker.js")"></script>
 <script src="@Href(string.Format("~/Ders/Js/Ders.Labels.{0}.js",dil))"></script>   
 <script src="@Href("~/Ders/Js/Ders.min.js")"></script>
 }
