--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -503,5 +503,5 @@ else if (liste=="dosya" && dersSahibi && queryDers.Arsivlendi==0 && queryDers.Si
 <script src="http://malsup.github.com/jquery.form.js"></script>
 <script src="@Href("~/Shared/Plugins/daterangepicker/daterangepicker.js")"></script>
 <script src="@Href(string.Format("~/Ders/Js/Ders.Labels.{0}.js",dil))"></script>   
-<script src="@Href("~/Ders/Js/Ders.min.js")"></script>
+<script src="@Href("~/Ders/Js/Default.min.js")"></script>
 }
