--- a/Ders/Ayarlar.cshtml
+++ b/Ders/Ayarlar.cshtml
@@ -183,7 +183,7 @@
 <script src="http://malsup.github.com/jquery.form.js"></script>
 <script src="@Href("~/Shared/Plugins/daterangepicker/daterangepicker.js")"></script>
 <script src="@Href(string.Format("~/Ders/Js/Ders.Labels.{0}.js",dil))"></script>   
-<script src="@Href("~/Ders/Js/Ders.min.js")"></script>
+<script src="@Href("~/Ders/Js/Ayarlar.min.js")"></script>
    
 }
 
