--- a/Ders/Liste.cshtml
+++ b/Ders/Liste.cshtml
@@ -228,6 +228,6 @@
 <script src="http://malsup.github.com/jquery.form.js"></script>
 <script src="@Href("~/Shared/Plugins/daterangepicker/daterangepicker.js")"></script>
 <script src="@Href(string.Format("~/Ders/Js/Ders.Labels.{0}.js",dil))"></script>   
-<script src="@Href("~/Ders/Js/Ders.min.js")"></script>
+<script src="@Href("~/Ders/Js/Liste.min.js")"></script>
 }
 
