--- a/Ders/Default.cshtml
+++ b/Ders/Default.cshtml
@@ -382,7 +382,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">@Resources.Resource.lblYeniBirOdevVer</h4>
+        <h4 class="modal-title" id="myModalLabelOdev">@Resources.Resource.lblYeniBirOdevVer</h4>
       </div>
       <div class="modal-body">
         <form method="post" enctype="multipart/form-data" id="frmOdevEkle">
@@ -398,7 +398,6 @@
                         <select id="cmbOdevGonderimi" class="form-control" name="OdevGonderimi">
                             <option value="1"> @Resources.Resource.lblAcik</option>
                             <option value="2"> @Resources.Resource.lblKapali</option>
-                            <option value="3"> @Resources.Resource.lblSonTeslimTarihineGoreOtomatik</option>
                         </select>
 
                        <br>
