--- a/Dosya/Ayarlar.cshtml
+++ b/Dosya/Ayarlar.cshtml
@@ -175,8 +175,8 @@
 @section js
 {
    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-   <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Dosya/Ayarlar.js",dil))"></script>
-   <script src="@Href("~/Shared/Javascript/Dosya/Ayarlar.min.js")"></script>
+   <script src="@Href(string.Format("~/Dosya/Js/Dosya.Labels.{0}.js",dil))"></script>
+   <script src="@Href("~/Dosya/Js/Ayarlar.min.js")"></script>
 }
 
 
