--- a/Dosya/Liste.cshtml
+++ b/Dosya/Liste.cshtml
@@ -334,8 +334,6 @@
 
 @section js
 {
-
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Dosya/Liste.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Dosya/Liste.min.js")"></script>
-   
+ <script src="@Href(string.Format("~/Dosya/Js/Dosya.Labels.{0}.js",dil))"></script>
+ <script src="@Href("~/Dosya/Js/Liste.min.js")"></script>  
 }
