--- a/Hesap/Giris.cshtml
+++ b/Hesap/Giris.cshtml
@@ -162,8 +162,8 @@ if (WebSecurity.IsAuthenticated)
 
     <!--Beyond Scripts-->
     <script src="@Href("~/Shared/TemaBeyond/assets/js/beyond.min.js")"></script>
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Hesap/Giris.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Hesap/Giris.min.js")"></script>
+    <script src="@Href(string.Format("~/Hesap/Js/Hesap.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Hesap/Js/Giris.min.js")"></script>
     <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
