--- a/Hesap/ParolamiUnuttum.cshtml
+++ b/Hesap/ParolamiUnuttum.cshtml
@@ -78,8 +78,9 @@
     <script src="@Href("~/Shared/Plugins/jquery.growl/jquery.growl.js")"></script>
     <script src="@Href("~/Shared/Javascript/Dil/tr/Global.js")"></script>
     <script src="@Href("~/Shared/Javascript/Global.min.js")"></script>
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Hesap/ParolamiUnuttum.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Hesap/ParolamiUnuttum.min.js")"></script>
+    <script src="@Href(string.Format("~/Hesap/Js/Hesap.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Hesap/Js/ParolamiUnuttum.min.js")"></script>
+    
 
 </body>
 <!--Body Ends-->
