--- a/Hesap/Ayarlar.cshtml
+++ b/Hesap/Ayarlar.cshtml
@@ -171,6 +171,6 @@
 @section js
 {
 <script src="@Href("~/Shared/Plugins/JqueryValidate/jquery.form.js")"></script>
-<script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Hesap/Ayarlar.js",dil))"></script>
-<script src="@Href("~/Shared/Javascript/Hesap/Ayarlar.min.js")"></script>       
+<script src="@Href(string.Format("~/Hesap/Js/Hesap.Labels.{0}.js",dil))"></script>
+<script src="@Href("~/Hesap/Js/Ayarlar.min.js")"></script>       
 }
