--- a/Hesap/Yeni.cshtml
+++ b/Hesap/Yeni.cshtml
@@ -150,8 +150,8 @@
     <script src="@Href("~/Shared/Plugins/jquery.growl/jquery.growl.js")"></script>
     <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Global.js",dil))"></script>
     <script src="@Href("~/Shared/Javascript/Global.min.js")"></script>
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Hesap/Yeni.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Hesap/Yeni.min.js")"></script>
+    <script src="@Href(string.Format("~/Hesap/Js/Hesap.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Hesap/Js/Yeni.min.js")"></script>
 
 </body>
 <!--Body Ends-->
