--- a/Odev/Ayarlar.cshtml
+++ b/Odev/Ayarlar.cshtml
@@ -144,13 +144,11 @@
 @section js
 {
    <script src="//cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-    
-<script src="@Href("~/Shared/Plugins/datatables/jquery.dataTables.min.js")"></script>
-<script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>
+
 <script src="@Href("~/Shared/Plugins/moment/moment.min.js")"></script>
 <script src="@Href("~/Shared/Plugins/daterangepicker/daterangepicker.js")"></script>
-<script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Odev/Ayarlar.js",dil))"></script>
-<script src="@Href("~/Shared/Javascript/Odev/Ayarlar.min.js")"></script>
+<script src="@Href(string.Format("~/Odev/Js/Odev.Labels.{0}.js",dil))"></script>
+<script src="@Href("~/Odev/Js/Ayarlar.min.js")"></script>
 }
 
 
