--- a/Odev/Goster.cshtml
+++ b/Odev/Goster.cshtml
@@ -331,8 +331,8 @@
     }
     <script src="@Href("~/Shared/Plugins/datatables/jquery.dataTables.min.js")"></script>
     <script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Odev/Goster.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Odev/Goster.min.js")"></script>
+    <script src="@Href(string.Format("~/Odev/Js/Odev.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Odev/Js/Goster.min.js")"></script>
 
 }
 
