--- a/Odev/Liste.cshtml
+++ b/Odev/Liste.cshtml
@@ -250,6 +250,6 @@
    
 @section js
 {
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Odev/Liste.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Odev/Liste.min.js")"></script>  
+    <script src="@Href(string.Format("~/Odev/Js/Odev.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Odev/Js/Liste.min.js")"></script>  
 }
