--- a/Odev/OdevGonderileri.cshtml
+++ b/Odev/OdevGonderileri.cshtml
@@ -128,8 +128,8 @@
    
 <script src="@Href("~/Shared/Plugins/datatables/jquery.dataTables.min.js")"></script>
 <script src="@Href("~/Shared/Plugins/datatables/dataTables.bootstrap.js")"></script>
-<script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Odev/OdevGonderileri.js",dil))"></script>
-<script src="@Href("~/Shared/Javascript/Odev/OdevGonderileri.min.js")"></script>
+<script src="@Href(string.Format("~/Odev/Js/Odev.Labels.{0}.js",dil))"></script>
+<script src="@Href("~/Odev/Js/OdevGonderileri.min.js")"></script>
 }
 
 @{
