--- a/Odev/OdevGonderisi.cshtml
+++ b/Odev/OdevGonderisi.cshtml
@@ -160,7 +160,7 @@
 
 @section js
 {
-   <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Odev/OdevGonderisi.js",dil))"></script>
-   <script src="@Href("~/Shared/Javascript/Odev/OdevGonderisi.min.js")"></script>
+   <script src="@Href(string.Format("~/Odev/Js/Odev.Labels.{0}.js",dil))"></script>
+   <script src="@Href("~/Odev/Js/OdevGonderisi.min.js")"></script>
 
 }
