--- a/Panel/Default.cshtml
+++ b/Panel/Default.cshtml
@@ -215,6 +215,6 @@
  
 @section js
 {
-   <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Aktiviteler.js",dil))"></script>
-   <script src="@Href("~/Shared/Javascript/Aktiviteler.min.js")"></script>
+   <script src="@Href(string.Format("~/Panel/Js/Panel.Labels.{0}.js",dil))"></script>
+   <script src="@Href("~/Panel/Js/Default.min.js")"></script>
 }
