--- a/Shared/_LayoutYeni.cshtml
+++ b/Shared/_LayoutYeni.cshtml
@@ -383,8 +383,8 @@
     <script src="@Href("~/Shared/Plugins/jquery.growl/jquery.growl.js")"></script>
     <script src="@Href("~/Shared/Plugins/metisMenu/dist/metisMenu.min.js")"></script>
     <script src="@Href("~/Shared/Plugins/selectize/dist/js/standalone/selectize.js")"></script>
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Global.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Global.min.js")"></script>
+    <script src="@Href(string.Format("~/Shared/Js/Global.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Shared/Js/Global.min.js")"></script>
     
     <!--Page Related Scripts-->
    
