--- a/Hesap/YeniEgitmen.cshtml
+++ b/Hesap/YeniEgitmen.cshtml
@@ -185,8 +185,8 @@
     <script src="@Href("~/Shared/TemaBeyond/assets/js/beyond.min.js")"></script>
     <script src="@Href("~/Shared/Plugins/BlockUI/jquery.blockUI.js")"></script>
     <script src="@Href("~/Shared/Plugins/jquery.growl/jquery.growl.js")"></script>
-    <script src="@Href(string.Format("~/Shared/Javascript/Dil/{0}/Global.js",dil))"></script>
-    <script src="@Href("~/Shared/Javascript/Global.min.js")"></script>
+    <script src="@Href(string.Format("~/Shared/Js/Global.Labels.{0}.js",dil))"></script>
+    <script src="@Href("~/Shared/Js/Global.min.js")"></script>
     <script src="@Href(string.Format("~/Hesap/Js/Hesap.Labels.{0}.js",dil))"></script>
     <script src="@Href("~/Hesap/Js/YeniEgitmen.min.js")"></script>
 
