--- a/Odev/Liste.cshtml
+++ b/Odev/Liste.cshtml
@@ -168,7 +168,7 @@
         <h4 class="modal-title" id="myModalLabel">@Resources.Resource.lblYeniBirOdevVer</h4>
       </div>
       <div class="modal-body">
-        <form method="post" enctype="multipart/form-data" id="frmOdevEkle">
+        <form method="post" id="frmOdevEkle">
              <div class="row">
                     <div class="col-lg-6">
                         <label>@Resources.Resource.lblDers</label>
